--- a/eda_retail_store.ipynb
+++ b/eda_retail_store.ipynb
@@ -5334,7 +5334,7 @@
    ],
    "source": [
     "# Insights\n",
-    "print('The mean number of entrnaces is {}.'.format(mean_entrances))\n",
+    "print('The mean number of entrances is {}.'.format(mean_entrances))\n",
     "print('The minimum number of entrances is {}.'.format(min_entrances))\n",
     "print('The maximum number of entrances is {}.'.format(max_entrances))"
    ]
